# Tank-Wars

./: CMakeLists.txt
assets/models/cube/: scene.gltf
assets/models/forest_ground/: ground_tile.gltf
assets/models/old_house_ruin/: decimated_2.gltf  decimated_3.gltf
assets/models/tank/: big_wheels_0.gltf  big_wheels_1.gltf  gun.gltf  hull.gltf  medium_wheels_0.gltf  medium_wheels_1.gltf  medium_wheels_2.gltf  medium_wheels_3.gltf  medium_wheels_4.gltf  medium_wheels_5.gltf  single_track.gltf  single_track_2.gltf  small_wheels_0.gltf  small_wheels_1.gltf  small_wheels_2.gltf  track_curve.txt  turret.gltf  wheels_misc.gltf
assets/models/tank_ammo_heat/: transformed_2.gltf
shaders/: building_fragment.glsl  building_vertex.glsl  ground_fragment.glsl  ground_vertex.glsl  model_fragment.glsl  model_vertex.glsl  particle_fragment.glsl  particle_vertex.glsl  simple_fragment.glsl  simple_vertex.glsl  sprite_fragment.glsl  sprite_vertex.glsl  stencil_fragment.glsl  stencil_vertex.glsl  tank_fragment.glsl  tank_vertex.glsl  text_fragment.glsl  trajectory_fragment.glsl  trajectory_vertex.glsl
src/: main.cpp
src/core/: camera.cpp  camera.hpp  game.cpp  game.hpp  loading_scene.cpp  loading_scene.hpp  main_scene.cpp  main_scene.hpp  scene.hpp  window.cpp  window.hpp
src/entities/: building_manager.cpp  building_manager.hpp  enemy.cpp  enemy.hpp  enemy_manager.cpp  enemy_manager.hpp  ground.cpp  ground.hpp  particle.hpp  player.cpp  player.hpp  projectile.hpp  projectile_manager.cpp  projectile_manager.hpp  tank.cpp  tank.hpp
src/graphics/: light.hpp  mesh2D.cpp  mesh2D.hpp  mesh3D.cpp  mesh3D.hpp  model.cpp  model.hpp  shader.cpp  shader.hpp  sprite.cpp  sprite.hpp  texture.cpp  texture.hpp
src/utils/: colors.cpp  colors.hpp  constants.hpp  hitbox.hpp  random_generator.cpp  random_generator.hpp  resource_manager.cpp  resource_manager.hpp  shader_utils.cpp  shader_utils.hpp  transform.hpp
